--- a/MultipleActivities/app/src/main/res/layout/content_main.xml
+++ b/MultipleActivities/app/src/main/res/layout/content_main.xml
@@ -12,44 +12,73 @@
     tools:context="com.example.multipleactivities.sl28.multipleactivities.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button 1"
-        android:id="@+id/button1"
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="304dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="51dp" />
+        android:layout_alignParentStart="true">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button 2"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="59dp" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button 3"
-        android:id="@+id/button3"
-        android:layout_marginTop="77dp"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_column="0">
+                <Button
+                    android:layout_width="186dp"
+                    android:layout_height="96dp"
+                    android:text="Button 1"
+                    android:id="@+id/button1"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button 4"
-        android:id="@+id/button4"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_column="0">
+                <Button
+                    android:layout_width="186dp"
+                    android:layout_height="96dp"
+                    android:text="Button 2"
+                    android:id="@+id/button2"
+                    android:layout_row="2"
+                    android:layout_below="@+id/button3"
+                    android:layout_centerHorizontal="true" />
 
+            </TableRow>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="186dp"
+                android:layout_height="96dp"
+                android:text="Button 3"
+                android:id="@+id/button3"
+                android:layout_below="@+id/button"
+                android:layout_centerHorizontal="true"
+                android:layout_column="0" />
+
+            <Button
+                android:layout_width="186dp"
+                android:layout_height="96dp"
+                android:text="Button 4"
+                android:id="@+id/button4"
+                android:layout_row="3"
+                android:layout_below="@+id/button5"
+                android:layout_centerHorizontal="true"
+                android:layout_column="1" />
+        </TableRow>
+    </TableLayout>
 </RelativeLayout>
