--- a/MultipleActivities/app/src/main/res/layout/content_main.xml
+++ b/MultipleActivities/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,8 @@
         android:layout_marginTop="304dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true">
 
         <TableRow
             android:layout_width="match_parent"
