--- a/MultipleActivities/app/src/main/res/layout/content_main.xml
+++ b/MultipleActivities/app/src/main/res/layout/content_main.xml
@@ -1,85 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.multipleactivities.sl28.multipleactivities.MainActivity"
-    tools:showIn="@layout/activity_main">
+    android:weightSum="100">
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="304dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
+        android:layout_height="0dp"
+        android:layout_weight="50">
 
-        <TableRow
+
+        <!-- The Half Empty Area. Add whatever you want to add here. -->
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_launcher"
+            android:padding="30dp"
+            android:id="@+id/imageView" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="25"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:text="Button 1"
+            android:layout_margin="10dp"
+            android:id="@+id/button1" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:text="Button 2"
+            android:layout_margin="10dp"
+            android:id="@+id/button2" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="25"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:text="Button 3"
+            android:layout_margin="10dp"
+            android:id="@+id/button3" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:text="Button 4"
+            android:layout_margin="10dp"
+            android:id="@+id/button4" />
+
+    </LinearLayout>
+
+</LinearLayout>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.example.multipleactivities.sl28.multipleactivities.MainActivity"
+        tools:showIn="@layout/activity_main">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="304dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true">
 
             <TableRow
-                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_column="0">
+                android:layout_width="wrap_content">
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_column="0">
+                    <Button
+                        android:layout_width="186dp"
+                        android:layout_height="96dp"
+                        android:text="Button 1"
+                        android:id="@+id/button1"/>
+
+                </TableRow>
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_column="0">
+                    <Button
+                        android:layout_width="186dp"
+                        android:layout_height="96dp"
+                        android:text="Button 2"
+                        android:id="@+id/button2"
+                        android:layout_row="2"
+                        android:layout_below="@+id/button3"
+                        android:layout_centerHorizontal="true" />
+
+                </TableRow>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
                 <Button
                     android:layout_width="186dp"
                     android:layout_height="96dp"
-                    android:text="Button 1"
-                    android:id="@+id/button1"/>
+                    android:text="Button 3"
+                    android:id="@+id/button3"
+                    android:layout_below="@+id/button"
+                    android:layout_centerHorizontal="true"
+                    android:layout_column="0" />
 
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="0">
                 <Button
                     android:layout_width="186dp"
                     android:layout_height="96dp"
-                    android:text="Button 2"
-                    android:id="@+id/button2"
-                    android:layout_row="2"
-                    android:layout_below="@+id/button3"
-                    android:layout_centerHorizontal="true" />
-
+                    android:text="Button 4"
+                    android:id="@+id/button4"
+                    android:layout_row="3"
+                    android:layout_below="@+id/button5"
+                    android:layout_centerHorizontal="true"
+                    android:layout_column="1" />
             </TableRow>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:layout_width="186dp"
-                android:layout_height="96dp"
-                android:text="Button 3"
-                android:id="@+id/button3"
-                android:layout_below="@+id/button"
-                android:layout_centerHorizontal="true"
-                android:layout_column="0" />
-
-            <Button
-                android:layout_width="186dp"
-                android:layout_height="96dp"
-                android:text="Button 4"
-                android:id="@+id/button4"
-                android:layout_row="3"
-                android:layout_below="@+id/button5"
-                android:layout_centerHorizontal="true"
-                android:layout_column="1" />
-        </TableRow>
-    </TableLayout>
-</RelativeLayout>
+        </TableLayout>
+    </RelativeLayout>-->
